Update SEO and meta data

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,23 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#512f01" />
+    <title>Jaz Singh&apos;s Portfolio</title>
     <meta
       name="description"
-      content="Jaz Singh Portfolio"
+      content="Jaz Singh&apos;s software engineering portfolio."
     />
+    <meta name="og:title" content="Jaz Singh&apos;s portfolio" />
+    <meta
+      name="og:description"
+      content="Jaz Singh&apos;s software engineering portfolio."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/static/images/skillPlotsDarkMode-2023.png" media="(prefers-color-scheme: dark)">
+    <meta property="og:image" content="%PUBLIC_URL%/static/images/skillPlotsLightMode-2023.png" media="(prefers-color-scheme: light)">
+    <meta property="og:type" content="website" />
+    <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: dark)" />
+    <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: light)">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Jaz Singh Portfolio</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ER09MXY0X6"></script>
     <script>
