Add URL to meta image

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
       name="og:description"
       content="Jaz Singh&apos;s software engineering portfolio."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/static/images/skillPlotsDarkMode-2023.png" media="(prefers-color-scheme: dark)">
-    <meta property="og:image" content="%PUBLIC_URL%/static/images/skillPlotsLightMode-2023.png" media="(prefers-color-scheme: light)">
+    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsDarkMode-2023.png" media="(prefers-color-scheme: dark)">
+    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsLightMode-2023.png" media="(prefers-color-scheme: light)">
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: light)">
