Fix invalid html in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
       name="og:description"
       content="Jaz Singh&apos;s software engineering portfolio."
     />
-    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsDarkMode-2023.png" media="(prefers-color-scheme: dark)">
-    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsLightMode-2023.png" media="(prefers-color-scheme: light)">
+    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsDarkMode-2023.png" media="(prefers-color-scheme: dark)" />
+    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsLightMode-2023.png" media="(prefers-color-scheme: light)" />
+    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsDarkMode-2023.png" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: dark)" />
-    <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: light)" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Google tag (gtag.js) -->
