Normalize header meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,22 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jaz Singh&apos;s Portfolio</title>
-    <meta
-      name="description"
-      content="Jaz Singh&apos;s software engineering portfolio."
-    />
-    <meta name="og:title" content="Jaz Singh&apos;s portfolio" />
-    <meta
-      name="og:description"
-      content="Jaz Singh&apos;s software engineering portfolio."
-    />
-    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsDarkMode-2023.png" media="(prefers-color-scheme: dark)" />
-    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsLightMode-2023.png" media="(prefers-color-scheme: light)" />
-    <meta property="og:image" content="https://jazeee.com/static/images/skillPlotsDarkMode-2023.png" />
-    <meta property="og:type" content="website" />
+    <!-- HTML Meta Tags -->
+    <title>Jaz Singh&apos;s portfolio</title>
+    <meta name="description" content="Jaz Singh's software engineering portfolio.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Jaz Singh's portfolio">
+    <meta itemprop="description" content="Jaz Singh's software engineering portfolio.">
+    <meta itemprop="image" content="http://jazeee.com/static/images/skillPlotsDarkMode-2023.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://jazeee.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Jaz Singh's portfolio">
+    <meta property="og:description" content="Jaz Singh's software engineering portfolio.">
+    <meta property="og:image" content="http://jazeee.com/static/images/skillPlotsDarkMode-2023.png">
+
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: light)" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
