Add og image width and height

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <meta property="og:title" content="Jaz Singh's portfolio">
     <meta property="og:description" content="Jaz Singh's software engineering portfolio.">
     <meta property="og:image" content="http://jazeee.com/static/images/websiteStaticImage.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: light)" />
