Fix non https links

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Jaz Singh's portfolio">
     <meta itemprop="description" content="Jaz Singh's software engineering portfolio.">
-    <meta itemprop="image" content="http://jazeee.com/static/images/websiteStaticImage.png">
+    <meta itemprop="image" content="https://jazeee.com/static/images/websiteStaticImage.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://jazeee.com">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Jaz Singh's portfolio">
     <meta property="og:description" content="Jaz Singh's software engineering portfolio.">
-    <meta property="og:image" content="http://jazeee.com/static/images/websiteStaticImage.png">
+    <meta property="og:image" content="https://jazeee.com/static/images/websiteStaticImage.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
