Convert to vite and npm
Summary
===
`vite` is several times faster at dev and building the app.
I converted from `create-react-app` to `vite` and noticed several factors improvement
in both the dev startup and build times.
I also notice that the code splitting reduced the size of the largest js payload from being over 1MB to being 228K.
In addition, the home page initial load is about 185K instead of 270K.

I did run into a couple of issues:
1. MUI `styles` package code needs to be imported prior to MUI.
   a. See: https://stackoverflow.com/questions/74542488/react-material-ui-createtheme-default-is-not-a-function
2. Absolute imports need to be defined consistently between tsconfig and vite config
3. eslint config file -> cjs. This is related to package.json becoming type: module.

Changes
===
- Upgrade packages
- Convert to `src/` imports
- Convert to `vite`
- Convert to `npm`
- Adjust playwright baseURL
- Simplify `tsconfig` to match vite defaults
- Add `react-error-boundary`
- Rearrange root level providers

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- HTML Meta Tags -->
     <title>Jaz Singh&apos;s portfolio</title>
@@ -24,8 +24,8 @@
 
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#512f01" media="(prefers-color-scheme: light)" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ER09MXY0X6"></script>
     <script>
@@ -36,8 +36,10 @@
       gtag('config', 'G-ER09MXY0X6');
     </script>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
